make-basic-style-like-colors-fonts-and-etc

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
-
+    <p class="uni">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus modi eveniet. Dolor,
+        molestias aperiam quos error a consequatur adipisci aut eveniet assumenda, velit, illo dolores quisquam nesciunt
+        omnis dolore?</p>
 </body>
 
 </html>
