make-basic-layout-and-logo-and-subttl-left

--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
 </head>
 
 <body>
-    <p class="uni">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus modi eveniet. Dolor,
-        molestias aperiam quos error a consequatur adipisci aut eveniet assumenda, velit, illo dolores quisquam nesciunt
-        omnis dolore?</p>
+    <main>
+        <section class="top--body">
+            <div class="container">
+                <div class="row">
+                    <div class="col top--body__left">
+                        <div class="top--body__logo">
+                            <img src="./img/dF5SId3UHWd.svg" height="106px" alt="">
+                        </div>
+                        <h2 class="top--body__subttl">
+                            Connect with friends and the world around you on Facebook.
+                        </h2>
+                    </div>
+                    <div class="col top--body__right">3</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="bottom--body"></section>
+    </main>
 </body>
 
 </html>
