make-main-basics-form

--- a/index.html
+++ b/index.html
@@ -16,14 +16,34 @@
             <div class="container">
                 <div class="row">
                     <div class="col top--body__left">
-                        <div class="top--body__logo">
-                            <img src="./img/dF5SId3UHWd.svg" height="106px" alt="">
+                        <div class="">
+                            <img class="top--body__logo" src="./img/dF5SId3UHWd.svg" width="301px" height="106px"
+                                alt="">
                         </div>
                         <h2 class="top--body__subttl">
                             Connect with friends and the world around you on Facebook.
                         </h2>
                     </div>
-                    <div class="col top--body__right">3</div>
+                    <div class="col top--body__right">
+                        <form action="#" class="main-form">
+                            <div class="input">
+                                <input type="text" class="inp--text">
+                            </div>
+                            <div class="input">
+                                <input type="text" class="inp--pass">
+                            </div>
+                            <div class="fm-btn">
+                                <button type="button" class="btn">Log In</button>
+                            </div>
+                            <p class="forgot--text">Forgot password?</p>
+
+                            <hr>
+                            
+                            <div class="fm-btn">
+                                <button type="button" class="btn">Log In</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
