make-two-text-boxes-styles

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                             <div class="input">
                                 <input type="text" class="inp--text">
                             </div>
-                            <div class="input">
-                                <input type="text" class="inp--pass">
+                            <div class="input pass">
+                                <input type="text" class="inp--text ">
                             </div>
                             <div class="fm-btn">
                                 <button type="button" class="btn">Log In</button>
