make-btns-and-text-form-styles

--- a/index.html
+++ b/index.html
@@ -27,22 +27,27 @@
                     <div class="col top--body__right">
                         <form action="#" class="main-form">
                             <div class="input">
-                                <input type="text" class="inp--text">
+                                <input type="text" class="inp--text" placeholder="Email or phone number">
                             </div>
                             <div class="input pass">
-                                <input type="text" class="inp--text ">
+                                <input type="text" class="inp--text" placeholder="Password">
                             </div>
                             <div class="fm-btn">
-                                <button type="button" class="btn">Log In</button>
+                                <button type="button" class="btn1">Log In</button>
                             </div>
-                            <p class="forgot--text">Forgot password?</p>
 
-                            <hr>
-                            
+                            <div class="ftext">
+                                <a href="#" class="forgot--text">Forgot password?</a>
+                            </div>
+
+                            <div class="line"></div>
+
                             <div class="fm-btn">
-                                <button type="button" class="btn">Log In</button>
+                                <button type="button" class="btn">Create new account</button>
                             </div>
                         </form>
+                        <p class="celeb"><a href="#" class="celeb--link">Create a Page</a> for a celebrity, brand or
+                            business.</p>
                     </div>
                 </div>
             </div>
