make-top-html-footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,24 @@
         </section>
 
         <section class="bottom--body">
-            <div class="container"></div>
+            <div class="container d-felx-col">
+                <div class="bottom--body__head">
+                    <ul class="body--lang__list">
+                        <li class="lang--list__items">English (US)</li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">Português (Brasil)</a></li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">Español</a></li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">Français (France)</a></li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">Italiano</a></li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">Deutsch</a></li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">العربية</a></li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">हिन्दी</a></li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">中文(简体)</a></li>
+                        <li class="lang--list__items"><a href="#" class="lang--list__link">日本語</a></li>
+                        <li class="lang--list__items"><button class="lang--list__btn">+</button></li>
+                    </ul>
+                </div>
+                <div class="bottom--body__content"></div>
+            </div>
         </section>
     </main>
 </body>
