make-top-footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
 
         <section class="bottom--body">
-            <div class="container d-felx-col">
+            <div class="container d-felx-col pt-20">
                 <div class="bottom--body__head">
                     <ul class="body--lang__list">
                         <li class="lang--list__items">English (US)</li>
