make-basic-html-bottom-menu-footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,39 @@
                         <li class="lang--list__items"><button class="lang--list__btn">+</button></li>
                     </ul>
                 </div>
-                <div class="bottom--body__content"></div>
+                <div class="bottom--body__content">
+                    <ul class="d-flex add--menu">
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Sign Up</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Log In</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Messenger</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Facebook Lite</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Watch</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Places</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Games</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Marketplace</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Facebook Pay</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Oculus</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Portal</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Instagram</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Bulletin</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Local</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Fundraisers</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Services</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Voting Information Center</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Groups</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">About</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Create Ad</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Create Page</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Developers</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Careers</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Privacy</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Cookies</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Ad choices</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Terms</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Help</a></li>
+                        <li class="add--menu--items"><a href="#" class="add--menu--links">Contact Uploading & Non-UsersSettingsActivity log</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
